kubernetes/gabernetes/apps/shlink/app/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: egress-shlink
spec:
  endpointSelector:
    matchLabels:
      policy.gabe565.com/egress-shlink: "true"
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: shlink
            app.kubernetes.io/name: shlink
            app.kubernetes.io/controller: api
      toPorts:
        - ports:
            - port: "8080"
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: shlink
  namespace: shlink
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: shlink
      app.kubernetes.io/controller: api
  ingress:
    - fromEndpoints:
        - matchLabels:
            policy.gabe565.com/egress-shlink: "true"
          matchExpressions:
            - key: io.kubernetes.pod.namespace
              operator: Exists
